--- a/app/assets/stylesheets/extern/base/navigation.css.scss
+++ b/app/assets/stylesheets/extern/base/navigation.css.scss
@@ -1,21 +1,33 @@
 $layout-width: 960px;
 
 nav {
-  background-color: #222;
+  width: 100%;
   height: 33px;
+  position: absolute;
+  left: 0;
+  z-index: 100;
+  
+  background-color: #222;
   border-bottom: 1px solid #424242;
-  font-size: 15px;
+  font-size: 15px; 
+  
+  .container {
+    position: relative;
+  }
   
   ul {
     list-style: none;
     margin-left: 180px;
   }
   
+  li {
+    padding: 7px 2%;
+    float: left;
+  }
+  
   a:link, a:visited {
     display: block;
-    padding: 7px 2%;
     color: white;
-    float: left;
   }
   
   a.active {
@@ -24,11 +36,15 @@ nav {
   }
   
   a#welcome {
-    position: absolute;
-    z-index: 100;
-    text-align:center;
     width: 169px;
     height: 148px;
+    
+    position: absolute;
+    z-index: 100;
+    left: 0;
+    top: 0;
+    
+    text-align:center;
     padding: 0;
     background: image-url('layout/header-lesezeichen-background.png') no-repeat;
   
@@ -55,15 +71,19 @@ nav {
     }
   }
   
-  #language-switch a {
-    background-color: #2e4672;
-    padding: 2px 10px;
-    margin: 4px 0 0 20px;
-    font-size: 12px;
-    border: 1px solid #ccc;
+  #language-switch {
     float: right;
+    padding: 0;
+        
+    a:link, a:visited {
+      background-color: #2e4672;
+      font-size: 12px;
+      border: 1px solid #ccc;
+      padding: 2px 10px;
+      margin: 4px 0 0 20px;
+    }
     
-    &:hover {
+    a:hover {
       text-decoration:none;
       background-color: #375B9E;
     }
