--- a/app/assets/stylesheets/extern/base/text.css.scss
+++ b/app/assets/stylesheets/extern/base/text.css.scss
@@ -10,7 +10,7 @@ body {
 }
 
 h1 {
-  font-size: 24px;
+  font-size: 22px;
   color: white;
   font-weight: bold;
   
