--- a/app/assets/stylesheets/extern/responsive/desktop_big/layout.scss
+++ b/app/assets/stylesheets/extern/responsive/desktop_big/layout.scss
@@ -1,12 +1,12 @@
-@media (max-width: 1199px) {
+@media (min-width: 1200px) {
 
   header h1 {
-    bottom: 2%;
+    bottom: 4%;
   }
 
   section#content {
     .container {
-      padding-top: 220px;
+      padding-top: 272px;
     }
   }
   
